deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flick
spec:
  ingressClassName: traefik
  rules:
    - host: flick.localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: flick-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flick-web
                port:
                  name: http
